[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/ui/main_menu_ui.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.1, 0.15, 1.0)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_left = 10
corner_radius_bottom_right = 10

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.08, 1.0)

[node name="TitleContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.3
offset_left = -200.0
offset_top = 50.0
offset_right = 200.0
alignment = 1

[node name="GameTitle" type="Label" parent="TitleContainer"]
layout_mode = 2
text = "BATTLE CASTLES"
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1

[node name="MenuContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
theme_override_constants/separation = 20
alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="MenuContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="PlayButton" type="Button" parent="MenuContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 60)
text = "BATTLE"
theme_override_font_sizes/font_size = 24

[node name="DeckBuilderButton" type="Button" parent="MenuContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 50)
text = "DECK"
theme_override_font_sizes/font_size = 18

[node name="SettingsButton" type="Button" parent="MenuContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 50)
text = "SETTINGS"
theme_override_font_sizes/font_size = 18

[node name="ShopButton" type="Button" parent="MenuContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 50)
text = "SHOP"
theme_override_font_sizes/font_size = 18

[node name="QuitButton" type="Button" parent="MenuContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 50)
text = "QUIT"
theme_override_font_sizes/font_size = 18

[node name="ProfilePanel" type="Panel" parent="."]
anchor_left = 0.02
anchor_top = 0.02
anchor_right = 0.35
anchor_bottom = 0.25
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="PlayerInfo" type="HBoxContainer" parent="ProfilePanel"]
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0

[node name="Avatar" type="TextureRect" parent="ProfilePanel/PlayerInfo"]
layout_mode = 2
custom_minimum_size = Vector2(50, 50)
expand_mode = 1
stretch_mode = 5

[node name="ColorRect" type="ColorRect" parent="ProfilePanel/PlayerInfo/Avatar"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.3, 0.3, 0.4, 1.0)

[node name="VBoxContainer" type="VBoxContainer" parent="ProfilePanel/PlayerInfo"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="ProfilePanel/PlayerInfo/VBoxContainer"]
layout_mode = 2
text = "Player"
theme_override_font_sizes/font_size = 18

[node name="LevelLabel" type="Label" parent="ProfilePanel/PlayerInfo/VBoxContainer"]
layout_mode = 2
text = "Level 1"
theme_override_font_sizes/font_size = 14

[node name="TrophyContainer" type="HBoxContainer" parent="ProfilePanel/PlayerInfo"]
layout_mode = 2

[node name="TrophyIcon" type="Label" parent="ProfilePanel/PlayerInfo/TrophyContainer"]
layout_mode = 2
text = "üèÜ"

[node name="TrophyCount" type="Label" parent="ProfilePanel/PlayerInfo/TrophyContainer"]
layout_mode = 2
text = "0"
theme_override_font_sizes/font_size = 16

[node name="Resources" type="HBoxContainer" parent="ProfilePanel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.75
offset_left = 10.0
offset_right = -10.0
theme_override_constants/separation = 20

[node name="GoldContainer" type="HBoxContainer" parent="ProfilePanel/Resources"]
layout_mode = 2

[node name="GoldIcon" type="Label" parent="ProfilePanel/Resources/GoldContainer"]
layout_mode = 2
text = "üí∞"

[node name="GoldCount" type="Label" parent="ProfilePanel/Resources/GoldContainer"]
layout_mode = 2
text = "100"

[node name="GemContainer" type="HBoxContainer" parent="ProfilePanel/Resources"]
layout_mode = 2

[node name="GemIcon" type="Label" parent="ProfilePanel/Resources/GemContainer"]
layout_mode = 2
text = "üíé"

[node name="GemCount" type="Label" parent="ProfilePanel/Resources/GemContainer"]
layout_mode = 2
text = "10"

[node name="ArenaInfo" type="HBoxContainer" parent="ProfilePanel"]
anchor_top = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="ArenaIcon" type="TextureRect" parent="ProfilePanel/ArenaInfo"]
layout_mode = 2
custom_minimum_size = Vector2(30, 30)
expand_mode = 1
stretch_mode = 5

[node name="ColorRect" type="ColorRect" parent="ProfilePanel/ArenaInfo/ArenaIcon"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.5, 0.3, 0.2, 1.0)

[node name="ArenaName" type="Label" parent="ProfilePanel/ArenaInfo"]
layout_mode = 2
text = "Training Camp"
theme_override_font_sizes/font_size = 14

[node name="ChestSlots" type="HBoxContainer" parent="ProfilePanel"]
visible = false
anchor_left = 0.65
anchor_top = 0.02
anchor_right = 0.98
anchor_bottom = 0.25
theme_override_constants/separation = 5

[node name="VersionLabel" type="Label" parent="."]
anchor_left = 0.98
anchor_top = 0.98
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -30.0
text = "v0.1.0-alpha"
horizontal_alignment = 2
vertical_alignment = 2

[node name="MatchmakingPopup" type="PopupPanel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -75.0
offset_right = 150.0
offset_bottom = 75.0

[node name="VBoxContainer" type="VBoxContainer" parent="MatchmakingPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
alignment = 1

[node name="StatusLabel" type="Label" parent="MatchmakingPopup/VBoxContainer"]
layout_mode = 2
text = "Searching for opponent..."
horizontal_alignment = 1

[node name="CancelButton" type="Button" parent="MatchmakingPopup/VBoxContainer"]
layout_mode = 2
text = "Cancel"